force-app/main/default/objects/User/fields/CodigoFilial__c.field-meta.xml
<CustomField>
    <fullName>CodigoFilial__c</fullName>
    <label>Código Filial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>