force-app/main/default/objects/User/fields/CodigoProtheus__c.field-meta.xml
<CustomField>
    <fullName>CodigoProtheus__c</fullName>
    <label>Código Protheus</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>