force-app/main/default/objects/User/fields/CodigoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CodigoRepresentante__c</fullName>
    <label>Código do representante</label>
    <length>100</length>
    <type>Text</type>
</CustomField>