force-app/main/default/objects/User/fields/compliance__c.field-meta.xml
<CustomField>
    <fullName>compliance__c</fullName>
    <label>Compliance</label>
    <relationshipName>Usu_rios</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>