force-app/main/default/objects/User/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <label>Documento</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>