force-app/main/default/objects/User/fields/Filial__c.field-meta.xml
<CustomField>
    <fullName>Filial__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; IdFilial__c, IdFilial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filial</label>
    <type>Text</type>
</CustomField>