force-app/main/default/objects/User/fields/FimFerias__c.field-meta.xml
<CustomField>
    <fullName>FimFerias__c</fullName>
    <label>Fim de férias</label>
    <type>Date</type>
</CustomField>