force-app/main/default/objects/User/fields/Funcao__c.field-meta.xml
<CustomField>
    <fullName>Funcao__c</fullName>
    <label>Função</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gerente de negócio</fullName>
            </value>
            <value>
                <fullName>Gerente geral</fullName>
            </value>
            <value>
                <fullName>Superintendente</fullName>
            </value>
            <value>
                <fullName>Diretor</fullName>
            </value>
            <value>
                <fullName>Vice presidencia</fullName>
            </value>
            <value>
                <fullName>Presidente</fullName>
            </value>
            <value>
                <fullName>Ex gerente parceiro</fullName>
            </value>
            <value>
                <fullName>Ex gerente inativo</fullName>
            </value>
            <value>
                <fullName>Retenção</fullName>
            </value>
            <value>
                <fullName>Ex gerente exceção</fullName>
            </value>
            <value>
                <fullName>Gestor(a)</fullName>
            </value>
            <value>
                <fullName>Analista</fullName>
            </value>
            <value>
                <fullName>Analista SAC/Ouvidoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>