force-app/main/default/objects/User/fields/IdFilial__c.field-meta.xml
<CustomField>
    <fullName>IdFilial__c</fullName>
    <label>Id Filial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>