force-app/main/default/objects/User/fields/IdGrupo__c.field-meta.xml
<CustomField>
    <fullName>IdGrupo__c</fullName>
    <label>Id do grupo</label>
    <type>TextArea</type>
</CustomField>