force-app/main/default/objects/User/fields/InicioFerias__c.field-meta.xml
<CustomField>
    <fullName>InicioFerias__c</fullName>
    <label>Início de férias</label>
    <type>Date</type>
</CustomField>