force-app/main/default/objects/User/fields/RetiradoGrupo__c.field-meta.xml
<CustomField>
    <fullName>RetiradoGrupo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retirado do grupo</label>
    <type>Checkbox</type>
</CustomField>