force-app/main/default/objects/User/fields/UnidadeNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadeNegocio__c</fullName>
    <label>Unidade de negócio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operações estruturadas</fullName>
            </value>
            <value>
                <fullName>Investimentos</fullName>
            </value>
            <value>
                <fullName>Produtos financeiros</fullName>
            </value>
            <value>
                <fullName>Formalização</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>SAC/Ouvidoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>