force-app/main/default/objects/User/fields/UsuarioFerias__c.field-meta.xml
<CustomField>
    <fullName>UsuarioFerias__c</fullName>
    <formula>AND(TODAY() &gt;= InicioFerias__c, TODAY() &lt;= FimFerias__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuário em férias</label>
    <type>Checkbox</type>
</CustomField>