force-app/main/default/objects/User/fields/vp__c.field-meta.xml
<CustomField>
    <fullName>vp__c</fullName>
    <label>VP</label>
    <relationshipName>Usu_rios1</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>