force-app/main/default/objects/User/validationRules/validaDocumento.validationRule-meta.xml
<ValidationRule>
    <fullName>validaDocumento</fullName>
    <active>true</active>
    <description>Esta regra valida se o documento contém caracteres especiais</description>
    <errorConditionFormula>CONTAINS(Documento__c, &quot;.&quot;) || CONTAINS(Documento__c, &quot;-&quot;) || CONTAINS(Documento__c, &quot;/&quot;)</errorConditionFormula>
    <errorDisplayField>Documento__c</errorDisplayField>
    <errorMessage>O campo documento não deve conter caracteres especiais.</errorMessage>
</ValidationRule>